--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -297,8 +297,9 @@ interfaces:
         type: float32
         unit: us
         c_setter: set_servo2_input
-      eject_button_pressed: readonly bool
-      load_button_pressed: readonly bool
+      button_1_pressed: readonly bool
+      button_2_pressed: readonly bool
+      button_3_pressed: readonly bool
       step_dir_active: readonly bool
       current_state: readonly AxisState
       requested_state: AxisState
