--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -1410,6 +1410,7 @@ interfaces:
           offset: {type: float32, unit: turns}
           is_active_high: bool
           ignore_during_startup: bool
+          ignore_during_encoder_index_search: bool
           debounce_ms: {type: uint32, c_setter: set_debounce_ms}
 
   ODrive.MechanicalBrake:
